--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,7 @@
 html, body, #root {
     height: 100%;
     position: relative;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .layout_main {
@@ -15,28 +16,27 @@ html, body, #root {
 .layout_subMenu {
     height: 100%;
     background: #f5f5f7 !important;
-    border-right-color: #e1e1e2;
-}
-
-.layout_subMenu .subMenu {
-    padding-left: 10px;
+    border-right: 1px solid #e1e1e2;
 }
 
 .layout_subMenu .subMenu p {
     margin: 0;
     height: 30px;
     line-height: 30px;
+    padding-left: 15px;
 }
 
 .layout_subMenu ul {
-    padding-left: 20px;
+    padding-left: 0;
 }
 
 .layout_subMenu li {
+    padding-left: 20px;
     list-style: none;
     height: 30px;
     line-height: 30px;
     cursor: pointer;
+    position: relative;
 }
 
 .layout_header {
@@ -52,3 +52,61 @@ html, body, #root {
     padding: 0;
     border-top: 1px solid #e1e1e2;
 }
+
+.subMenu_active {
+    background: #e6e7ea;
+    color: #000;
+}
+
+.subMenu_active::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 3px;
+    background: #c62f2f;
+}
+
+/*----------歌单table列表样式--------------*/
+
+.music-list .ant-table-thead>th {
+    background: #fafafa !important;
+}
+
+.music-list .ant-table-thead>tr>th {
+    border-bottom: 1px solid #e1e1e2 !important;
+    border-top: 1px solid #e1e1e2 !important;
+    border-right: 1px solid #e1e1e2 !important;
+}
+
+.music-list .ant-table-thead>tr:first-child>th:first-child {
+    border-top-left-radius: 0;
+}
+
+.music-list .ant-table-thead>tr:first-child>th:last-child {
+    border-top-right-radius: 0;
+    border-right: none !important;
+}
+
+.music-list .ant-table-tbody>tr:nth-child(even) td {
+    background: #f5f5f7 !important;
+}
+
+.music-list .ant-table-tbody>tr:nth-child(odd) td {
+    background: #fafafa !important;
+}
+
+.music-list .ant-table-tbody>tr:hover td {
+    background: #ebeced !important;
+}
+
+.music-list .ant-table-tbody>tr>td {
+    border-bottom: none;
+}
+
+.music-list .ant-table-thead>tr>th, .music-list .ant-table-tbody>tr>td {
+    padding: 5px 16px;
+}
+
+/*----------歌单table列表样式--------------*/
