--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -1,13 +1,14 @@
 .tagMenu {
     height: 60px;
-    box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
     background: #fff;
+    display: flex;
+    align-items: flex-end;
+    padding-left: 20px;
 }
 
 .container {
-    height: calc(100% - 65px);
-    background: #f2f2f2;
-    margin-top: 5px;
-    padding: 0 20px;
+    height: calc(100% - 60px);
+    background: #fafafa;
     position: relative;
+    overflow-y: auto;
 }
